# EEG-Paradox-Solutions-LLM-EEG-TOOL

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  Launch HEX.bat  Launch Paradox.bat  README.md  Request Access  eeg_subprocess_launcher.py  launch-api-only.bat  launch.bat  package-lock.json  package.json  paradox-api.spec  paradox-eeg-worker.spec  pyproject.toml  requirements.txt  rules.example.yaml  run_server.py  runtime_hook.py  web-dev.bat
data/eeg_reference/: clinical_report_template.md  eeg_fundamentals.md  eeg_software_guide.md
data/eeg_scripts/: README.md  advanced_time_frequency_morlet.py  alpha_asymmetry.py  artifact_validation.py  band_power_analysis.py  basic_raw_psd_topomap.py  channel_standardize.py  clinical_q_assessment.py  clinical_report.py  connectivity_analysis.py  csd_analysis.py  eo_ec_comparison.py  expert_wpli_connectivity.py  ica_artifact_removal.py  inspect_edf.py  intermediate_epochs_evoked.py  phase_amplitude_coupling.py  prep_bad_channel_interpolate.py  quality_check.py  source_localization.py  spectral_features.py  vigilance_analysis.py  viz_channel_correlation_heatmap.py  viz_compare_two_halves_psd.py  viz_connectivity_circle_wpli.py  viz_envelope_band_topomap.py  viz_epochs_image.py  viz_evoked_butterfly_spatial.py  viz_evoked_topomap_grid.py  (+10 more)
doc/: 00-overview.md  README.md  START-HERE.md  glossary.md  technical-reference.html
hexnode/: __init__.py  config.py  embed_quantize.py  ingest_watcher.py  memory_store.py  ollama_autostart.py  ollama_client.py  reflection.py
installers/: Paradox Solutions LLM_0.3.2_x64_en-US.msi  README.md
scripts/: apply_gpl_headers.py  build_backend.ps1  build_dlc_connectivity_norms.py  build_dlc_eeg_norms.ps1  build_frontend.ps1  build_release.ps1  bump_version.ps1  discord_bot.py  gen_icons.py  html_to_pdf.mjs  launch.ps1  reflect.py  setup.ps1
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: README.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
web/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  postcss.config.mjs
(+95 files in other folders)
